--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.csi</groupId>
 	<artifactId>hrmjpaadv</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging> 
 	<name>hrmjpaadv</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
